--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,26 @@
 plugins {
     id 'java'
+    id 'application'
 }
 
-group 'org.example'
-version '1.0-SNAPSHOT'
+group 'com.viper'
+version '1.0'
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    implementation 'org.projectlombok:lombok:1.18.24'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
+}
+
+jar {
+    manifest {
+        attributes(
+                'Main-Class': 'com.viper.Viper'
+        )
+    }
 }
 
 test {
